re-organising grid with correct rows gaps

--- a/astro/src/styles/pages/_landing.scss
+++ b/astro/src/styles/pages/_landing.scss
@@ -5,66 +5,68 @@
     
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto 40px auto 128px auto auto 128px auto 80px auto auto auto 80px auto;
     gap: 24px;
 
     &__hello {
-        grid-column: 2/4;
+        grid-column: 1/4;
         grid-row: 1;
         font-weight: 700;
         font-size: 72px;
+        font-size: clamp(1rem, 1rem + 4cqw, 5rem);
     }
     
     &__main-promise {
         grid-column: 1/4;
-        grid-row: 2;
+        grid-row: 3;
         display: flex;
         align-items: flex-end;
-        font-size: 48px;
+        font-size: clamp(1rem, 1rem + 2.5cqw, 5rem);
         text-indent: 128px;
     }
     
     &__first-promise {
         grid-column: 2/3;
-        grid-row: 3;
+        grid-row: 5;
     }
     
     &__second-promise {
         grid-column: 3/4;
-        grid-row: 4;
+        grid-row: 6;
     }
     
     &__third-promise {
         grid-column: 4/5;
-        grid-row: 3;
+        grid-row: 5;
     }
 
     &__profile-picture {
         grid-column: 4/5;
-        grid-row: 2;
+        grid-row: 3;
     }
     
     &__section-title--projects {
         grid-column: 1/5;
-        grid-row: 5;
+        grid-row: 8;
     }
     
     &__projects--first {
         grid-column: 2/5;
-        grid-row: 6;
+        grid-row: 10;
     }
     
     &__projects--second {
         grid-column: 2/5;
-        grid-row: 7;
+        grid-row: 11;
     }
     
     &__projects--third {
         grid-column: 2/5;
-        grid-row: 8;
+        grid-row: 12;
     }
 
     &__section-title--career {
         grid-column: 1/5;
-        grid-row: 9;
+        grid-row: 14;
     }
 }
